# ansipp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmark.py  build.sh  install.sh  vcpkg.json
.github/workflows/: build.yml  cmake.yml  linux.yml  macos.yml  windows.yml
demo/: demo.cpp
demos/: cursor_store_restore.cpp  dead_pixels.cpp  logo.cpp  nonblock.cpp  readkey.cpp  resize.cpp  simple.cpp  snake.cpp  snake_ncurses.cpp  windows_bug.cpp  windows_terminal_performance.cpp
include/: ansipp.hpp
include/ansipp/: attrs.hpp  charbuf.hpp  config.hpp  cursor.hpp  error.hpp  esc.hpp  init.hpp  input.hpp  integral.hpp  io.hpp  mouse.hpp  restore.hpp  stream.hpp  terminal.hpp  util.hpp  vec.hpp
src/: ansipp.cpp  ts_opt.hpp
src/ansipp/: attrs.cpp  cursor.cpp  error.cpp  init.cpp  input.cpp  io.cpp  restore.cpp  restore.hpp  stream.cpp  terminal.cpp  ts_opt.hpp
test/: ansipp.cpp
test/ansipp/: attrs.cpp  base_gen.hpp  charbuf.cpp  cursor.cpp  format.cpp  input.cpp  integral.cpp  pow_gen.hpp  vec.cpp
